--- a/Makefile.am
+++ b/Makefile.am
@@ -2,6 +2,9 @@
 
 SUBDIRS = src tools examples doc test
 
+pkgconfigdir = $(libdir)/pkgconfig
+pkgconfig_DATA = gts.pc
+
 dist-hook:
 	$(RM) -r `find $(distdir) -name CVS -type d -print`
 	$(RM) `find $(distdir) -name ".cvsignore" -type f -print`
