happrox is installed (s.popinet@niwa.co.nz--2004/gts--mainline--0.7--patch-7)
s.popinet@niwa.co.nz--2004/gts--mainline--0.7--patch-7
Keywords:

darcs-hash:8eea9d82c96cfe769e7ed4e84d979ca6e684391d

--- a/examples/Makefile.am
+++ b/examples/Makefile.am
@@ -13,7 +13,8 @@ if HAS_NETPBM
 NETPBM_EXTRA = happrox
 endif
 
-bin_PROGRAMS = transform
+bin_PROGRAMS = transform \
+	$(NETPBM_EXTRA)
 
 noinst_PROGRAMS = \
 	set \
@@ -33,5 +34,4 @@ noinst_PROGRAMS = \
 	sphere \
 	stripe \
 	optimize \
-	merge \
-	$(NETPBM_EXTRA)
+	merge
