Added fast triangle-box intersection test (s.popinet@niwa.co.nz--2004/gts--mainline--0.7--patch-9)
s.popinet@niwa.co.nz--2004/gts--mainline--0.7--patch-9
Keywords:

Written by Tomas Akenine-Moller.

darcs-hash:d381f50b5ef7a4eb4f2320bc9fd3451b886d77b2

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -56,7 +56,8 @@ libgts_la_SOURCES = \
 	graph.c \
 	pgraph.c \
 	partition.c \
-	curvature.c
+	curvature.c \
+	tribox3.c
 
 include_HEADERS = \
 	gts.h gtsconfig.h
