--- a/Makefile.am
+++ b/Makefile.am
@@ -5,9 +5,5 @@ SUBDIRS = src tools examples doc test
 pkgconfigdir = $(libdir)/pkgconfig
 pkgconfig_DATA = gts.pc
 
-dist-hook:
-	$(RM) -r `find $(distdir) -name CVS -type d -print`
-	$(RM) `find $(distdir) -name ".cvsignore" -type f -print`
-
 changelog:
-	cvs2cl.pl --usermap .usermap --prune
+	darcs changes > ChangeLog
