Added ChangeLog target
darcs-hash:3d0d2c57f068c780e3a108a38aec1d91296e8276

--- a/Makefile.am
+++ b/Makefile.am
@@ -5,5 +5,5 @@ SUBDIRS = src tools examples doc test
 pkgconfigdir = $(libdir)/pkgconfig
 pkgconfig_DATA = gts.pc
 
-changelog:
+ChangeLog:
 	darcs changes > ChangeLog
