Debian snapshot creation (based on Marcelo Magalon official debian packages)
darcs-hash:7d4dec960976552aa447f2c796f22c8988abb6bb

--- a/Makefile.am
+++ b/Makefile.am
@@ -7,3 +7,10 @@ pkgconfig_DATA = gts.pc
 
 ChangeLog:
 	darcs changes > ChangeLog
+
+debian-snapshot:
+	sh debian/changelog.sh
+	dpkg-buildpackage -rfakeroot -b
+	rm -f debian/repo/*
+	mv -f ../*.changes ../*.deb debian/repo
+	cd debian/repo && dpkg-scanpackages . /dev/null | gzip -9c > Packages.gz
