Force regeneration of ChangeLog before creating debian package
darcs-hash:85734d21ac306cdabb93841523d9bd13d18da7b5

--- a/Makefile.am
+++ b/Makefile.am
@@ -9,6 +9,7 @@ ChangeLog:
 	darcs changes > ChangeLog
 
 debian-snapshot:
+	darcs changes > ChangeLog
 	sh debian/changelog.sh
 	dpkg-buildpackage -rfakeroot -b
 	rm -f debian/repo/*
