Added math lib to gts.pc
darcs-hash:d26e06c2ddf1185a9f146f08f5d6aee527467c40

--- a/gts.pc.in
+++ b/gts.pc.in
@@ -7,5 +7,5 @@ Name: GTS
 Description: GNU Triangulated Surface Library
 Version: @VERSION@
 Requires: glib-2.0,gthread-2.0,gmodule-2.0
-Libs: -L${libdir} @LIBS@ -lgts
+Libs: -L${libdir} @LIBS@ -lgts -lm
 Cflags: -I${includedir}
