--- a/configure.in
+++ b/configure.in
@@ -68,7 +68,7 @@ AC_ISC_POSIX
 AC_HEADER_STDC
 
 AC_CHECK_LIB(netpbm, pgm_init, netpbm="true",
-  AC_MSG_WARN([libnetpbm not found. Some programs will not be available.]))
+  AC_MSG_WARN([libnetpbm not found. Some programs will not be available.]), [-lm])
 AM_CONDITIONAL(HAS_NETPBM, test x$netpbm = xtrue)
 
 AM_PATH_GLIB_2_0(2.4.0, has_glib2=yes, has_glib2=no, gthread gmodule)
