Fix for versioning of debian packages
darcs-hash:15c82eff906b4d3291f36852706dbc7699ad2225

--- a/Makefile.am
+++ b/Makefile.am
@@ -8,7 +8,7 @@ pkgconfig_DATA = gts.pc
 ChangeLog:
 	darcs changes > ChangeLog
 
-debian-snapshot:
+debian-snapshot: config.h
 	darcs changes > ChangeLog
 	sh debian/changelog.sh
 	dpkg-buildpackage -rfakeroot -b
