--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -13,7 +13,7 @@ gts-config: gts-config.in
 lib_LTLIBRARIES = libgts.la
 
 libgts_la_LDFLAGS = -version-info $(LT_CURRENT):$(LT_REVISION):$(LT_AGE)\
-	-release $(LT_RELEASE) -export-dynamic
+	-release $(LT_RELEASE) -export-dynamic -lm
 
 libgts_la_DEPENDENCIES = \
 	predicates_init.h
