--- a/debian/control
+++ b/debian/control
@@ -2,10 +2,11 @@ Source: gts-snapshot
 Section: math
 Priority: extra
 Maintainer: Stephane Popinet <popinet@users.sf.net>
-Build-Depends: debhelper (>= 4), libglib2.0-dev, autotools-dev, gtk-doc-tools (>= 1.3-4)
+Build-Depends: cdbs, debhelper (>= 4), autotools-dev, libglib2.0-dev, libnetpbm10-dev, gtk-doc-tools (>= 1.3-4)
+Homepage: http://gts.sourceforge.net/
 
 Package: libgts-snapshot-dev
-Section: devel
+Section: libdevel
 Priority: extra
 Architecture: any
 Depends: libglib2.0-dev, libgts-snapshot (= ${Source-Version})
@@ -24,7 +25,7 @@ Package: libgts-snapshot
 Section: devel
 Priority: extra
 Architecture: any
-Depends: libglib2.0-0, libnetpbm10
+Depends: libc6, libglib2.0-0, libnetpbm10
 Conflicts: libgts-0.7-1, libgts-dev
 Replaces: libgts-0.7-1
 Description: GTS Library (development snapshot) -- runtime environment
