--- a/tools/Makefile.am
+++ b/tools/Makefile.am
@@ -2,7 +2,7 @@
 
 INCLUDES = -I$(top_srcdir) -I$(top_srcdir)/src -I$(includedir)\
 	 -DG_LOG_DOMAIN=\"Gts-tools\"
-LDADD = $(top_builddir)/src/libgts.la -lm
+LDADD = $(top_builddir)/src/libgts.la
 DEPS = $(top_builddir)/src/libgts.la
 
 bin_PROGRAMS = gts2oogl gtscompare gtscheck stl2gts gts2dxf gts2stl
