Added man pages from debian (thanks Ruben!)
Ignore-this: 6219302d9f3660f284b855e0f3ef68cb

darcs-hash:a573b374247b426562ce0c77dec166f9a28bbc73

--- a/configure.in
+++ b/configure.in
@@ -254,6 +254,7 @@ src/Makefile
 src/gts-config
 tools/Makefile
 doc/Makefile
+doc/manpages/Makefile
 examples/Makefile
 test/Makefile
 test/boolean/Makefile
