Added 'launchpad-snapshot' Makefile target
darcs-hash:4acc66a8a050a4e082f4e6d5ac60b343eddf742e

--- a/Makefile.am
+++ b/Makefile.am
@@ -1,6 +1,6 @@
 ## Process this file with automake to produce Makefile.in
 
-SUBDIRS = src tools examples doc test
+SUBDIRS = src tools examples doc test debian
 
 pkgconfigdir = $(libdir)/pkgconfig
 pkgconfig_DATA = gts.pc
@@ -15,3 +15,9 @@ debian-snapshot: config.h
 	rm -f debian/repo/*
 	mv -f ../*.changes ../*.deb debian/repo
 	cd debian/repo && dpkg-scanpackages . /dev/null | gzip -9c > Packages.gz
+
+launchpad-snapshot: config.h dist
+	tar xzf gts-?.?.?.tar.gz
+	cd gts-?.?.? && ./configure && darcs changes > ChangeLog && sh debian/changelog.sh && dpkg-buildpackage -rfakeroot -k07AB22DC -S -sa
+	rm -f gts-?.?.?.tar.gz
+	rm -r -f gts-?.?.?
