Fixed incomplete netpbm library check
Ignore-this: df601bcb7a6403b84db0d2c1bcfee1ed

darcs-hash:8a15ce002e2d17725ab83516e80cc83811a30320

--- a/configure.in
+++ b/configure.in
@@ -76,7 +76,7 @@ if test x$netpbm = xfalse ; then
                    netpbm="false")
 fi
 if test x$netpbm = xtrue ; then
-   AC_CHECK_LIB(netpbm, pgm_init, netpbm="true", netpbm="false")
+   AC_CHECK_LIB(netpbm, pgm_init, netpbm="true", netpbm="false", [-lm])
 fi
 if test x$netpbm = xfalse ; then
    AC_MSG_WARN([libnetpbm not found. Some programs will not be available.])
