gts.spec supports SLED10 rather than openSUSE 11.0
Ignore-this: 602099f4860001ae9a863789b00f6833

darcs-hash:fc8531dde7a0b030f2f6e4d50edc5c2432e9e7a1

--- a/Makefile.am
+++ b/Makefile.am
@@ -28,7 +28,7 @@ buildservice-snapshot: config.h dist
 	tar xzf $(PACKAGE)-?.?.?.tar.gz
 	rm -f $(PACKAGE)-?.?.?.tar.gz
 	mv -f $(PACKAGE)-?.?.? $(PACKAGE)-snapshot
-	cd $(PACKAGE)-snapshot && ./configure && darcs changes > ChangeLog && sh debian/changelog.s && chmod +x debian/rules
+	cd $(PACKAGE)-snapshot && ./configure && darcs changes > ChangeLog && sh debian/changelog.sh && chmod +x debian/rules
 	tar czvf $(PACKAGE)-snapshot.tar.gz $(PACKAGE)-snapshot
 	dpkg-source -b $(PACKAGE)-snapshot
 	rm -r -f $(PACKAGE)-snapshot
