--- a/Makefile.am
+++ b/Makefile.am
@@ -28,11 +28,11 @@ buildservice-snapshot: config.h dist
 	tar xzf $(PACKAGE)-?.?.?.tar.gz
 	rm -f $(PACKAGE)-?.?.?.tar.gz
 	mv -f $(PACKAGE)-?.?.? $(PACKAGE)-snapshot
-	cd $(PACKAGE)-snapshot && ./configure && darcs changes > ChangeLog && sh debian/changelog.sh && chmod +x debian/rules
+	cd $(PACKAGE)-snapshot && ./configure && darcs changes > ChangeLog && sh debian/changelog.sh && chmod +x debian/rules && make distclean
 	tar czvf $(PACKAGE)-snapshot.tar.gz $(PACKAGE)-snapshot
 	dpkg-source -b $(PACKAGE)-snapshot
 	rm -r -f $(PACKAGE)-snapshot
-	rm -f $(OSC_DIR)/*
+	cd $(OSC_DIR) && osc update && rm -f $(OSC_DIR)/*
 	cp -f rpm/$(PACKAGE).spec $(OSC_DIR)
 	mv -f $(PACKAGE)-snapshot.tar.gz $(PACKAGE)-snapshot_*.tar.gz $(PACKAGE)-snapshot_*.dsc $(OSC_DIR)
 	cd $(OSC_DIR) && osc addremove && osc commit -m "snapshot release"
