Fixed typo in debian control file
Ignore-this: 28e44e8068291caabc6bb641207ce29d

darcs-hash:be28f921862082e091de1f0447d1a05c3eeda101

--- a/debian/control
+++ b/debian/control
@@ -23,7 +23,7 @@ Package: libgts-snapshot
 Section: libs
 Architecture: any
 Depends: ${shlibs:Depends}, ${misc:Depends}
-Conflicts: libgts-0.7-1, libgts-0.7.5, libgts-bin
+Conflicts: libgts-0.7-1, libgts-0.7-5, libgts-bin
 Description: GTS Library (development snapshot) -- runtime environment
  GTS includes a number of useful functions to deal with triangulated
  surfaces.  Refer to the libgts-dev package description for more
